[project]
name = "rag-intro-course"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.12"
dependencies = [
    "numpy>=2.3.2",
    "pandas>=2.3.1",
    "matplotlib>=3.10.5",
    "ipykernel>=6.30.0",
    "langgraph>=0.6.3",
    "langchain>=0.3.27",
    "ipython>=9.4.0",
    "langchain-openai>=0.3.28",
    "langchain-groq>=0.3.6",
    "langchain-core>=0.3.72",
    "langchain-community>=0.3.27",
    "langchain-mistralai>=0.2.11",
    "pip>=25.2",
    "langchain-chroma>=0.2.5",
]

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"
